Alignment fix.

--- a/src/app/components/authorized/create-campaign/create-campaign.component.scss
+++ b/src/app/components/authorized/create-campaign/create-campaign.component.scss
@@ -131,12 +131,12 @@
     .funded-chart {
       margin-bottom: 20px;
     }
-    .btn-wrapper {
+    .cc-btn-wrapper {
       margin-top: 44px;
       margin-bottom: 40px;
       text-align: right;
       .gv-secondary-btn {
-        margin-right: 10px;
+        margin-left: 10px;
       }
     }
   }
